fix: backface-visibility

--- a/Projeto Final/assets/projects/SinglePage/assets/css/index.css
+++ b/Projeto Final/assets/projects/SinglePage/assets/css/index.css
@@ -69,6 +69,7 @@ body{
 
 .front, .back {
     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     width: 100%;
     height: 100%;
     background: #201c29;
